Archiving from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="e-content">
          	
 
-<p>Connection is an essential element of healthy relationships. And connections start with bids. John Gottman calls a bid “the fundamental unit of emotional communication”. Bids “can be a question, a gesture, a look, a touch.” Here are few things to know about bidding, according to Dr. John Gottman.</p>
+<p>Connection is an essential element of healthy relationships. And connections start with bids. Dr. John Gottman calls a bid “the fundamental unit of emotional communication”. Bids “can be a question, a gesture, a look, a touch.” Here are few things to know about bidding, according to Dr. Gottman, as found in <em>The Relationship Cure</em> and other writings.</p>
 
 <h2 id="clear-bidding-vs-fuzzy-bidding">Clear Bidding vs Fuzzy Bidding</h2>
 
@@ -333,7 +333,7 @@
 
 <p><strong>N</strong>-nondefensively listen (two ears, one mouth; listen twice as much; don’t interrupt)</p>
 
-<p><strong>E</strong>-empathize (understand is intellectual, this is the emotional part; you understand what she feels and why; emotions are opportunities for intimacy and connection, even painful ones)</p>
+<p><strong>E</strong>-empathize (U-&ldquo;understand&rdquo; is the intellectual part, this is the emotional part; discern what the other person feels and why; emotions, even painful ones, are opportunities for intimacy and connection)</p>
 
 <p>If you want to know more about why this works and build your skills of attunement. I&rsquo;d suggest you do the following.</p>
 
